--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,17 +9,6 @@ p{
 	line-height: 1;
 }
 
-
-.main {
-	width: 100%;
-	height: 100%;
-	margin: 0 auto;
-}
-
-pre {
-	margin: 0;
-}
-
 header {
 	font-family: 'Montserrat', regular;
 	width: 100%;
@@ -70,7 +59,7 @@ header {
 	margin-right: 50%;
 }
 
-.midle_photo {
+main {
 	width: 100%;
 	text-align: center;
 	background-image: url("../images/circle.png");
@@ -82,9 +71,6 @@ header {
 	bottom: 0; 
 	right: 0;
 }
-.midle_circle_image {
-    z-index: 1;
-}
 
 .midle_human {
 	width: 21%;
@@ -95,7 +81,7 @@ header {
 	bottom: 0;
 }
 
-.midle_text {
+.slogan {
 	font-family: 'Montserrat', Bold;
 	font-size: 6vw;
 	font-weight: 700;
@@ -111,7 +97,6 @@ header {
 	margin-left: 9%;
 	margin-top: 5%;
 	text-decoration: none;
-	transition: 0.5s linear;
 }
 
 .more_link {
@@ -123,16 +108,16 @@ header {
 	color: #e6ba38;
 }
 
-.footer {
+footer {
 	font-family: 'Montserrat', SemiBold;
 	position: absolute;
 	margin-left: 87%;
-	margin-top: 45%;
+	margin-top: 42%;
 }
 
 .footer_navigation {
 	position: absolute;
-	margin-top: 43%;
+	margin-top: 41%;
 	margin-left: 2%;
 }
 
